samples/_failures_safe/1761706404_95decf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3a921e3a.c: In function ‘main’:
./samples/SAFE/__tmp_3a921e3a.c:152:22: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  152 |         free_matrix(&mat
      |                      ^~~
      |                      mat2
./samples/SAFE/__tmp_3a921e3a.c:152:22: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_3a921e3a.c:152:25: error: expected ‘)’ at end of input
  152 |         free_matrix(&mat
      |                    ~    ^
      |                         )
./samples/SAFE/__tmp_3a921e3a.c:152:9: error: expected declaration or statement at end of input
  152 |         free_matrix(&mat
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_3a921e3a.c:152:9: error: expected declaration or statement at end of input
